# itsSomething

./: .gitignore  CMakeLists.txt  README.md
build_scripts/: build.sh
iOS/itsSomething/: AppDelegate.h  AppDelegate.m  ViewController.h  ViewController.mm  main.m
iOS/itsSomething.xcodeproj/: project.pbxproj
iOS/itsSomething.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
iOS/itsSomething.xcodeproj/project.xcworkspace/xcuserdata/jorgen.xcuserdatad/: UserInterfaceState.xcuserstate
iOS/itsSomething.xcodeproj/xcuserdata/jorgen.xcuserdatad/xcschemes/: xcschememanagement.plist
macOS/itsSomething/: AppDelegate.h  AppDelegate.m  Info.plist  ViewController.h  ViewController.mm  main.m
macOS/itsSomething-lib/include/: renderer.h
macOS/itsSomething-lib/include/utils/: util.hpp
macOS/itsSomething.xcodeproj/: project.pbxproj
macOS/itsSomething.xcodeproj/project.xcworkspace/xcuserdata/jorgen.xcuserdatad/: UserInterfaceState.xcuserstate
macOS/itsSomething.xcodeproj/xcuserdata/jorgen.xcuserdatad/xcdebugger/: Breakpoints_v2.xcbkptlist
macOS/itsSomething.xcodeproj/xcuserdata/jorgen.xcuserdatad/xcschemes/: itsSomething.xcscheme  xcschememanagement.plist
macOS/itsSomething/Base.lproj/: Main.storyboard
src/: main.cpp  renderer.cpp
src/utils/: util_init.cpp
